--- a/11MegaBlock/index.html
+++ b/11MegaBlock/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <script src="https://cdn.tiny.cloud/1/ndxizoq5fcv33yebu5ozoylqgg87aabdnnxxnki4ixqnpv7u/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
   </head>
   <body class="bg-gray-400">
     <div id="root"></div>
